_devops/Kubernetes/manifests/dev/20-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mendix-app-service
  namespace: mendix-app-dev
  labels:
    app: YourApp
    parentApp: mendix
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: YourApp
    parentApp: mendix
