_devops/Kubernetes/manifests/dev/10-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mendix-ingress
  namespace: mendix-app-dev
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  labels:
    app: YourApp
    parentApp: mendix
spec:
  rules:
  - host: <Your FrontDoor Domain>
    http:
      paths:
      - backend:
          serviceName: mendix-app-service
          servicePort: 80
        path: /
